# smartptr

./: Makefile.am  README.md  app-docs.make  bootstrap  configure.ac  smartptr.pc.in  smartptr.spec.in
smartptr/: Makefile.am  smartptr
